# my_currency

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
envs/local/: postgres_db.env  web.env
envs/test/: web.env
src/: manage.py
src/common/utils/: datetime.py  iterators.py  networking.py
src/core/: admin.py  apps.py  managers.py  models.py  querysets.py  services.py  urls.py  views.py
src/core/api/: urls.py
src/core/api/v1/: serializers.py  urls.py  views.py
src/core/exchange_rate_providers/: typing.py  utils.py
src/core/fixtures/: currencies_dump.json
src/core/migrations/: 0001_initial.py
src/core/static/core/css/: currency_converter.css
src/core/static/core/js/: currency_converter.js
src/core/templates/admin/: currency_converter.html
src/entrypoints/: entrypoint.prod.sh  entrypoint.sh
src/exchange_rate_providers/: currency_beacon.py  mock.py
src/my_currency/: admin.py  apps.py  asgi.py  urls.py  wsgi.py
src/my_currency/settings/: base.py  development.py  production.py  test.py
src/my_currency/templates/admin/: base_site.html
